--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carepoint",
+  "name": "EnergiPort_Frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@stripe/stripe-js": "^7.6.1",
     "axios": "^1.7.2",
     "csurf": "^1.11.0",
